[gd_scene load_steps=42 format=2]

[ext_resource path="res://resources/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/BackgroundBlur.gdshader" type="Shader" id=2]
[ext_resource path="res://sounds/hudalert.mp3" type="AudioStream" id=3]
[ext_resource path="res://resources/theme-submenu.tres" type="Theme" id=5]
[ext_resource path="res://resources/theme.tres" type="Theme" id=6]
[ext_resource path="res://scenes/ui-game/HUD.gd" type="Script" id=7]
[ext_resource path="res://scenes/ui-bits/HUDToast.tscn" type="PackedScene" id=8]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 0.304688, 0.304688, 0.304688, 0.0470588 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.180392, 0.760784, 0.494118, 1, 0.304688, 0.304688, 0.304688, 0.0470588 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 0.470588, 0, 1, 0.304688, 0.304688, 0.304688, 0.0470588 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0.207843, 0.517647, 0.894118, 1, 0.304688, 0.304688, 0.304688, 0.0470588 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Animation" id=9]
resource_name = "FadeInVignette"
tracks/0/type = "value"
tracks/0/path = NodePath("Vignette:material:shader_param/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ 0.0, 0.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Vignette:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=63]
resource_name = "FadeOutVignette"
tracks/0/type = "value"
tracks/0/path = NodePath("Vignette:material:shader_param/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ 0.4, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Vignette:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Vignette:material:shader_param/vignette_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Vignette:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=22]
shader = ExtResource( 2 )
shader_param/lod = 2.0

[sub_resource type="Gradient" id=18]
colors = PoolColorArray( 0.133333, 0.133333, 0.133333, 0.313726, 1, 1, 1, 0.313726 )

[sub_resource type="GradientTexture" id=19]
gradient = SubResource( 18 )

[sub_resource type="Gradient" id=20]
colors = PoolColorArray( 0.266667, 0.784314, 0.254902, 1, 0, 1, 0.115, 1 )

[sub_resource type="GradientTexture" id=21]
gradient = SubResource( 20 )
width = 512

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0.0784314 )

[sub_resource type="Gradient" id=23]
colors = PoolColorArray( 0.560784, 0.560784, 0.560784, 0.588235, 0.627451, 0.627451, 0.627451, 0.627451 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 23 )

[sub_resource type="Gradient" id=25]
colors = PoolColorArray( 0.2, 0.2, 0.2, 1, 0.266667, 0.266667, 0.266667, 1 )

[sub_resource type="GradientTexture" id=26]
gradient = SubResource( 25 )

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 1, 1, 1, 0.156863 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 0.27451 )

[sub_resource type="ShaderMaterial" id=35]
shader = ExtResource( 2 )
shader_param/lod = 2.0

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0.00387597, 1 )
colors = PoolColorArray( 0, 0, 0, 0.694118, 0, 0, 0, 0.45098 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )
width = 64

[sub_resource type="Gradient" id=16]
colors = PoolColorArray( 0.503906, 0, 0, 1, 0.871094, 0, 0, 1 )

[sub_resource type="GradientTexture" id=17]
gradient = SubResource( 16 )
width = 32

[sub_resource type="Shader" id=31]
code = "/* Modified from https://godotshaders.com/shader/color-vignetting/, by randomDam and licensed under CC0 */
shader_type canvas_item;

uniform float vignette_intensity = 0.4;
uniform float vignette_opacity : hint_range(0.0, 1.0) = 0.5;
uniform vec4 vignette_rgb : hint_color = vec4(0.0, 0.0, 0.0, 1.0);

float vignette(vec2 uv){
	uv *= 1.0 - uv.xy;
	float vignette = uv.x * uv.y * 15.0;
	return pow(vignette, vignette_intensity * vignette_opacity);
}

void fragment(){
	vec4 text = texture(TEXTURE, UV);
	
	text.rgba *= (vignette_rgb.rgba);
	text.rgba *= (1.0 - vignette(UV));
	
	COLOR = vec4(text.rgb,text.a);
}"

[sub_resource type="ShaderMaterial" id=32]
shader = SubResource( 31 )
shader_param/vignette_intensity = 0.0
shader_param/vignette_opacity = 0.5
shader_param/vignette_rgb = Color( 1, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=64]
shader = ExtResource( 2 )
shader_param/lod = 2.0

[sub_resource type="Animation" id=62]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=28]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=27]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
modulate = Color( 1, 1, 1, 0.875 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 7 )
default_gradient = SubResource( 2 )
corrosion_gradient = SubResource( 4 )
fire_gradient = SubResource( 6 )
ice_gradient = SubResource( 8 )

[node name="ProgressTween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/FadeInVignette = SubResource( 9 )
anims/FadeOutVignette = SubResource( 63 )
anims/RESET = SubResource( 33 )
anims/fade_out = SubResource( 10 )

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
position = Vector2( 153.5, 58 )
scale = Vector2( 1.385, 1 )
copy_mode = 2

[node name="HUD" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 307.0
margin_bottom = 142.0
custom_constants/separation = 16

[node name="ProgressBars" type="TextureRect" parent="HUD"]
margin_right = 180.0
margin_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 180, 56 )
size_flags_horizontal = 0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="ColorRect" parent="HUD/ProgressBars"]
show_behind_parent = true
material = SubResource( 22 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="HUD/ProgressBars"]
margin_left = 7.0
margin_top = 7.0
margin_right = 187.0
margin_bottom = 33.0
rect_min_size = Vector2( 180, 26 )
value = 50.0
texture_under = SubResource( 19 )
texture_progress = SubResource( 21 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highlight" type="Panel" parent="HUD/ProgressBars/HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoBar" type="TextureProgress" parent="HUD/ProgressBars"]
margin_left = 7.0
margin_top = 33.0
margin_right = 187.0
margin_bottom = 49.0
rect_min_size = Vector2( 180, 16 )
value = 50.0
texture_under = SubResource( 24 )
texture_progress = SubResource( 26 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Refills" type="Label" parent="HUD/ProgressBars/AmmoBar"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -1.0
margin_right = 25.0
margin_bottom = 2.0
theme = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0.286275, 0.286275, 0.286275, 1 )
text = "8"

[node name="Highlight" type="Panel" parent="HUD/ProgressBars/AmmoBar"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 180, 14 )
custom_styles/panel = SubResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusBar" type="PanelContainer" parent="HUD"]
margin_top = 72.0
margin_right = 310.0
margin_bottom = 124.0
theme = ExtResource( 5 )
custom_styles/panel = SubResource( 34 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Blur" type="ColorRect" parent="HUD/StatusBar"]
show_behind_parent = true
material = SubResource( 35 )
margin_left = 2.0
margin_top = 2.0
margin_right = 308.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HUD/StatusBar"]
margin_left = 2.0
margin_top = 2.0
margin_right = 308.0
margin_bottom = 50.0
custom_constants/margin_right = 10
custom_constants/margin_top = 8
custom_constants/margin_left = 10
custom_constants/margin_bottom = 8

[node name="Labels" type="HBoxContainer" parent="HUD/StatusBar/MarginContainer"]
margin_left = 10.0
margin_top = 8.0
margin_right = 296.0
margin_bottom = 40.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="TextureProgress" parent="HUD/StatusBar/MarginContainer/Labels"]
show_behind_parent = true
margin_right = 70.0
margin_bottom = 32.0
rect_min_size = Vector2( 70, 32 )
texture_under = SubResource( 15 )
texture_progress = SubResource( 17 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/StatusBar/MarginContainer/Labels/Level"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -9.5
margin_right = 27.0
margin_bottom = 9.5
text = "Level 0"

[node name="Wave" type="TextureProgress" parent="HUD/StatusBar/MarginContainer/Labels"]
show_behind_parent = true
margin_left = 85.0
margin_right = 155.0
margin_bottom = 32.0
rect_min_size = Vector2( 70, 32 )
texture_under = SubResource( 15 )
texture_progress = SubResource( 17 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/StatusBar/MarginContainer/Labels/Wave"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = -9.5
margin_right = 27.5
margin_bottom = 9.5
text = "Wave 0"

[node name="Points" type="Label" parent="HUD/StatusBar/MarginContainer/Labels"]
margin_left = 170.0
margin_top = 6.0
margin_right = 229.0
margin_bottom = 25.0
text = "0 points"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="HUD/StatusBar/MarginContainer/Labels"]
margin_left = 244.0
margin_top = 6.0
margin_right = 286.0
margin_bottom = 25.0
text = "0 FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vignette" type="ColorRect" parent="."]
visible = false
material = SubResource( 32 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alert" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="Darkening" type="ColorRect" parent="Alert"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Blur" type="ColorRect" parent="Alert"]
show_behind_parent = true
material = SubResource( 64 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Alert"]
anims/RESET = SubResource( 62 )
anims/fade_alert = SubResource( 28 )

[node name="Sound" type="AudioStreamPlayer" parent="Alert"]
stream = ExtResource( 3 )
bus = "SFX"

[node name="Label" type="Label" parent="Alert"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.5
margin_bottom = 32.5
custom_fonts/font = SubResource( 27 )
text = "alert!"
align = 1
valign = 1

[node name="HUDToast" parent="." instance=ExtResource( 8 )]
visible = false
is_warning = true
